syntax = "proto3";

package addsrv;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service Add {
  // Sum 对两个数字求和
  rpc Sum (SumRequest) returns (SumResponse) {
    option (google.api.http) = {
      post: "/api/v1/add/sum",
      body: "*"
    };
  }

  // Concat 方法拼接两个字符串
  rpc Concat (ConcatRequest) returns (ConcatResponse) {
    option (google.api.http) = {
      post: "/api/v1/add/concat",
      body: "*"
    };
  }
}


// Sum方法的请求参数
message SumRequest {
  int64 a = 1;
  int64 b = 2;
}

// Sum方法的响应
message SumResponse {
  int64 result = 1;
  string error = 2;
}

// Concat方法的请求参数
message ConcatRequest {
  string a = 1;
  string b = 2;
}

// Concat方法的响应
message ConcatResponse {
  string result = 1;
  string error = 2;
}